# Proot2Android

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  logging.h  native-lib.cpp
app/src/main/cpp/libarchive/libarchive/test/: test_read_set_format.c
app/src/main/cpp/proot/: .check_process_vm.c  .check_seccomp_filter.c
app/src/main/cpp/proot/cli/: cli.c
app/src/main/cpp/proot/execve/: enter.c
app/src/main/cpp/proot/loader/: loader.c
app/src/main/cpp/proot/syscall/: enter.c  rlimit.c
app/src/main/cpp/proot/tracee/: event.c  event.h  tracee.c
app/src/main/java/com/example/testforsvctrace/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
